@@ -1,3 +1,6 @@
+24/12/11
+  Added keyboard shortcut to toggle the panel
+
 23/12/11
   Added keyboard shortcut options to follow window to new desktop or not
 
